cabal-version:       3.0
name:                dredd
version:             0.1.0.0
synopsis:            Automatic law checking.
description:
-- bug-reports:
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Greg Pfeil (greg@technomadic.org)
maintainer:          Greg Pfeil (greg@technomadic.org)
copyright:           Greg Pfeil 2020
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       directory,
                       filepath,
                       ghc,
                       ghc-paths,
                       ghc-source-gen,
                       sort
  default-language:    Haskell2010
  exposed-modules:     Dredd,
                       Dredd.IO,
                       Dredd.Judge
  ghc-options:         -Wall
  hs-source-dirs:      src

executable lawmaster
  build-depends:       base >=4.14 && <4.15,
                       dredd,
                       filepath,
                       ghc,
                       ghc-paths,
                       ghc-source-gen,
                       Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      lawmaster
  main-is:             Main.hs

-- An example library, which wants to have its laws tested.
library test-lib
  build-depends:       base >=4.14 && <4.15,
                       dredd
  default-language:    Haskell2010
  exposed-modules:     My.Test.Mod,
                       My.Test.ModF
  ghc-options:         -Wall -Werror -fplugin Dredd
  hs-source-dirs:      test-lib

-- The testing support library for the example library. (This is where the
-- `Gen`s for any types and `Laws` for any classes are defined.)
library test-lib-testing
  build-depends:       base >=4.14 && <4.15,
                       hedgehog,
                       test-lib
  default-language:    Haskell2010
  exposed-modules:     My.Test.Mod.Gen
                       My.Test.ModF.Gen
  ghc-options:         -Wall -Werror
  hs-source-dirs:      test-lib-testing
     
-- The test suite that tests the laws for the example library
test-suite test-dredd
  build-depends:       base >=4.14 && <4.15,
                       dredd,
                       hedgehog,
                       hedgehog-classes,
                       test-lib,
                       test-lib-testing
  build-tool-depends:  dredd:lawmaster
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      dredd
  main-is:             Main.hs
  other-modules:       Judge.Dredd.My.Test.Mod,
                       Judge.Dredd.My.Test.ModF
  type:                exitcode-stdio-1.0